Add input to demo

--- a/demo.html
+++ b/demo.html
@@ -4,9 +4,16 @@
 <title>Gotta catch 'em all</title>
 
 <script src="bower_components/polymer/polymer.min.js"></script>
+
 <link rel="import" href="x-pokemon.html">
 </head>
 
 <body>
+    <p>
+        <input
+            value="pikachu"
+            onchange="document.querySelector('x-pokemon').name = this.value">
+    </p>
+
     <x-pokemon name="pikachu"></x-pokemon>
 </body>
