Use the `input` event instead of `change`
This way, the handler is called even if you paste or drag text into
the box. It’s also more responsive (faster) compared to `change` or
`keyup`/`keydown`.

See http://mathiasbynens.be/notes/oninput for details.

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
     <p>
         <input
             value="pikachu"
-            onchange="document.querySelector('x-pokemon').name = this.value">
+            oninput="document.querySelector('x-pokemon').name = this.value">
     </p>
 
     <x-pokemon name="pikachu"></x-pokemon>
