Hotlink Polymer for demo if bower_components aren't available

--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,13 @@
 <title>Gotta catch 'em all</title>
 
 <script src="bower_components/polymer/polymer.min.js"></script>
+<script>
+    if (!window.Polymer) {
+        var script = document.createElement('script');
+        script.src = 'http://www.polymer-project.org/polymer.min.js?20131010';
+        document.head.appendChild(script);
+    }
+</script>
 
 <link rel="import" href="x-pokemon.html">
 </head>
