Upgrade to polymer 0.1.1

--- a/demo.html
+++ b/demo.html
@@ -3,14 +3,8 @@
 <head>
 <title>Gotta catch 'em all</title>
 
-<script src="bower_components/polymer/polymer.min.js"></script>
-<script>
-    if (!window.Polymer) {
-        var script = document.createElement('script');
-        script.src = 'http://www.polymer-project.org/polymer.min.js?20131107';
-        document.head.appendChild(script);
-    }
-</script>
+<script src="bower_components/platform/platform.js"></script>
+<script src="bower_components/polymer/polymer.js"></script>
 
 <link rel="import" href="x-pokemon.html">
 </head>
