Upgrade Polymer/Webcomponents.js

--- a/x-pokemon.html
+++ b/x-pokemon.html
@@ -12,6 +12,8 @@
  * @class x-pokemon
  */
 -->
+<link href="bower_components/polymer/polymer.html" rel="import">
+
 <polymer-element name="x-pokemon" attributes="name">
     <template>
         <img class="pokemon" alt="{{name}}" src="http://img.pokemondb.net/artwork/{{name}}.jpg">
