Assume component will be installed as a bower component, and may not be in a folder called bower_components/

--- a/demo.html
+++ b/demo.html
@@ -3,9 +3,9 @@
 <head>
 <title>Gotta catch 'em all</title>
 
-<script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+<script src="../webcomponentsjs/webcomponents.js"></script>
 
-<link rel="import" href="x-pokemon.html">
+<link rel="import" href="./x-pokemon.html">
 </head>
 
 <body>
