--- a/x-pokemon.html
+++ b/x-pokemon.html
@@ -12,7 +12,7 @@
  * @class x-pokemon
  */
 -->
-<link href="bower_components/polymer/polymer.html" rel="import">
+<link href="../polymer/polymer.html" rel="import">
 
 <polymer-element name="x-pokemon" attributes="name">
     <template>
